--- a/clone-twitter/src/index.html
+++ b/clone-twitter/src/index.html
@@ -6,7 +6,7 @@
   <title>CloneTwitter</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/png" href="twitter-logo.png">
+  <link rel="icon" type="image/png" href="assets/twitter-logo.png">
 </head>
 
 <body class="antialised sans-serif bg-gray-200">
